removed duplicate questions

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -149,20 +149,21 @@ food, and they role technology plays in their kitchens.</p>
                     <dl>
                         <dt>Can you please describe to me your meals last week?</dt>
                         <dd>- What did you eat for lunch/dinner?</dd>
-                        <dd>- How does it differ between work days and weekend?</dd>
+                        <dd>- How does it differ between work days and weekends?</dd>
                     </dl>
                 </li>
                 <li>
                     <dl>
                         <dt>How often do you eat at home? Which meals?</dt>
-                        <dd>- If cook, do you usually cook for just one meal or multiple meals?</dd>
-                        <dd>- If multiple, do you ended up finish everything? Why?</dd>
+                        <dd>- (If cook) Do you usually cook for just one meal or multiple meals?</dd>
+                        <dd>- (If multiple) Do you end up finish everything? Why?</dd>
                     </dl>
                 </li>
-                <li>Do you typically eat by yourself, or with others? Why?</li>
+
                 <li>What factors influence your choice of meal? (Eat meal made by yourself or take away)</li>
+                <li>Do you typically eat by yourself, or with others? Why?</li>
                 <li>(if eat with others) Do they have any dietary requirements different to yours? (eg vegan, allergy,
-                diet?)</li>
+                diet?) How do you manage this?</li>
 
 
             </ul>
@@ -184,42 +185,39 @@ food, and they role technology plays in their kitchens.</p>
                     <dl>
                         <dt>What kind of food do you usually buy and why?</dt>
                         <dd>- Do you usually consume all the food you bought?</dd>
-                        <dd>- If not, What kind of food you usually does not consume all?</dd>
+                        <dd>- (If not) What kind of food do you usually not consume all?</dd>
                         <dd>(maybe they buy fresh food and we can discuss food wastage.)</dd>
                     </dl>
                 </li>
                 <li>
-                    <dl>
-                        <dt>What factors affect the food you buy?</dt>
-                        <dd>- Price? Taste? Shelf time? Why?</dd>
-                        <dd>(maybe they concern about the shelf life and will tell us how they try to reduce food
-                            wastage..)</dd>
-                    </dl>
+
+                <li>Please explain the thought process when you choose a product. How much do you consider
+                    things such as price, quality, value?</li>
                 </li>
+                <li>Do you plan your meals before shopping? Why/why not?</li>
                 <li>
                     <dl>
-                        <dt>Do you plan your meals before shopping? Why/why not?</dt>
                         <dt>Do you make a shopping list before buying food? Why?</dt>
                         <dd>- Do you always follow the plan while shopping?</dd>
-                        <dd>- If follow the plan, do you feel you are minimising food wastage?(because you can always
+                        <dd>- (If follow the plan) Do you feel you are minimising food wastage?(because you can always
                             finish up everything you bought?)</dd>
-                        <dd>- If not follow the plan, do you found it usually harder to finish up everything than having
-                            a plan(something spoiled before you consumed it?)</dd>
-                        <dd>- Do you ever experience impulse buying?</dd>
-                        <dd>- If yes,What did you do with those food when you found you does not like it?</dd>
+                        <dd>- (If not follow the plan) Do you find it harder to finish up everything, compared to having
+                            a plan?(something spoiled before you consumed it?)</dd>
+                        <dd>- Do you ever experience impulse buying? Why?</dd>
+                        <dd>- (If yes) What did you do with those foods if you found you did not like it?</dd>
                     </dl>
                 </li>
                 <li>
                     <dl>
-                        <dt>Can you describe the last time when you buy food in supermarket?</dt>
-                        <dd>- Did you plan ahead? </dd>
-                        <dd>- Please explain the thought process when you choose a product.</dd>
+
+                        <dt>Do you ever buy bulk foods? How often? Why?</dt>
+                        <dd>- Do you always finish up all the foods you bought?</dd>
                     </dl>
                 </li>
                 <li>
                     <dl>
                         <dt>Is it very often that you change your mind about what you are going to have for meals?</dt>
-                        <dd>- Do you usually buy the ingredients for th meal on the day you will make the meal or in
+                        <dd>- Do you usually buy the ingredients for the meal on the day you will make the meal or in
                         advance?</dd>
                         <dd>- If in advance, after you change you mind, what will you do with all the ingredients
                         you bought before?</dd>
@@ -228,17 +226,13 @@ food, and they role technology plays in their kitchens.</p>
                 <li>
                     <dl>
                         <dt>Do you do your grocery shopping in store (instead of online)? Why?</dt>
-                        <dd>- Can you tell me about the last time you bought groceries?</dd>
+                    </dl><dl>
+                        <dt>- Can you tell me about the last time you bought groceries?</dt>
+                        <dd>- Did you plan ahead? </dd>
                         <dd>- Were you there for anything specific?</dd>
                         <dd>- When was it?</dd>
                         <dd>- Can you tell me three of the things you bought, and why?</dd>
                         <dd>- Did you end up using all of them? (or still plan to)</dd>
-                    </dl>
-                </li>
-                <li>
-                    <dl>
-                        <dt>Do you ever buy bulk foods? How often? Why?</dt>
-                        <dd>- Do you always finish up all the foods you bought?</dd>
                     </dl>
                 </li>
                 <li>What type of food do you like to cook?</li>
@@ -258,7 +252,6 @@ food, and they role technology plays in their kitchens.</p>
                 <li>
                     <dl>
                         <dt>Do you ever have to throw food out? How often? Why?</dt>
-                        <dd>- What kind of food did you throw away? Why?</dd>
                         <dd>- Badly prepared food? Expired Food?</dd>
                         <dd>- Are there any types of food that you find you often throw out? Why?</dd>
                     </dl>
