changed display format

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -189,11 +189,8 @@ food, and they role technology plays in their kitchens.</p>
                         <dd>(maybe they buy fresh food and we can discuss food wastage.)</dd>
                     </dl>
                 </li>
-                <li>
-
                 <li>Please explain the thought process when you choose a product. How much do you consider
                     things such as price, quality, value?</li>
-                </li>
                 <li>Do you plan your meals before shopping? Why/why not?</li>
                 <li>
                     <dl>
@@ -223,11 +220,10 @@ food, and they role technology plays in their kitchens.</p>
                         you bought before?</dd>
                     </dl>
                 </li>
+                <li>Do you do your grocery shopping in store (instead of online)? Why?</li>
                 <li>
                     <dl>
-                        <dt>Do you do your grocery shopping in store (instead of online)? Why?</dt>
-                    </dl><dl>
-                        <dt>- Can you tell me about the last time you bought groceries?</dt>
+                        <dt>Can you tell me about the last time you bought groceries?</dt>
                         <dd>- Did you plan ahead? </dd>
                         <dd>- Were you there for anything specific?</dd>
                         <dd>- When was it?</dd>
