add foundation info

--- a/interviewguide.html
+++ b/interviewguide.html
@@ -66,7 +66,8 @@ food, and they role technology plays in their kitchens.</p>
         </td>
         <td>
             <ul>
-                <li>Confirm that people waste food at home</li>
+                <li>Confirm that people waste food at home.</li>
+                <li>Find out under what situation do people waste food.</li>
                 <li>Find out the reasons for household food wastage.</li>
                 <li>We propose that most food wastage in the home is a result of raw ingredients going bad.</li>
             </ul>
@@ -82,8 +83,9 @@ food, and they role technology plays in their kitchens.</p>
             </ul>
         </td>
         <td>
-            A project room on campus has been chosen as the place for the interview. Given our participants are
-            students, this should be convenient and familiar for them.
+            A project room on campus and a common room in student accommodation has been chosen as the place for the
+            interview, which provides a quiet environment. Given our participants are students, this should be
+            convenient and familiar for them.
         </td>
     </tr>
     <tr>
@@ -320,7 +322,6 @@ food, and they role technology plays in their kitchens.</p>
         </td>
     </tr>
     -->
-
 </table>
 <p>This table is based on the <a href="InterviewGuideTemplate.pdf">"Interview Guide Template"</a> by Kasia Mierzejewska of MAKE Studios.</p>
 
@@ -333,23 +334,24 @@ food, and they role technology plays in their kitchens.</p>
         <th>Note taker</th>
     </tr>
     <tr>
-        <td>3-4pm</td>
-        <td>Meg</td>
-        <td>Blythe</td>
-        <td>Jason</td>
-    </tr>
-    <tr>
         <td>4:15-5:15pm</td>
         <td>Thomas</td>
+        <td>Blythe</td>
         <td>Jason</td>
-        <td>Wendy</td>
     </tr>
     <tr>
-        <td></td>
+        <td>10:00-11:00am</td>
         <td></td>
         <td>Wendy</td>
         <td>Blythe</td>
     </tr>
+    <tr>
+        <td>12:00-13:00pm</td>
+        <td>Pavel</td>
+        <td>Jason</td>
+        <td>Wendy</td>
+    </tr>
+
 </table>
 <p><a href="index.html">Back</a></p>
 </body>
